# AIEDL

./: README.md  SPECIFICATION.md  sample.ai.edl
cpp/: CMakeLists.txt  README.md  aiedl.cpp  aiedl.h  example.cpp
javascript/: README.md  aiedl.js  example.js
python/: README.md  __init__.py  builder.py  parser.py  test_parser.py  test_validator.py  validator.py
